--- a/index.html
+++ b/index.html
@@ -7,29 +7,35 @@
   </head>
   <body>
     <header>
-      <!--add link to logo-->
-      <a href="">WEBSTUDIO</a>
       <nav>
+        <a href="./index.html">WebStudio</a>
         <ul>
-          <!-- add links to menu nav -->
           <li><a href="">Studio</a></li>
           <li><a href="">Portfolio</a></li>
           <li><a href="">Contacts</a></li>
         </ul>
       </nav>
       <!--contacts menu-->
-      <section>
+      <address>
         <ul>
           <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+11 (000) 111-11-11">+11 (000) 111-11-11</a></li>
+          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
         </ul>
-      </section>
+      </address>
     </header>
     <main>
-      <h1>Effective Solutions for Your Business</h1>
-      <button type="button">Order Service</button>
+      <section>
+        <h1>Effective Solutions for Your Business</h1>
+        <button type="button">Order Service</button>
+      </section>
       <!--company's features-->
       <section>
+        <h2>
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ut assumenda
+          odit quam nisi quod totam mollitia ex labore corrupti, quibusdam
+          asperiores, sunt perspiciatis quisquam consectetur accusantium
+          adipisci officiis ipsum? Provident.
+        </h2>
         <ul>
           <li>
             <h3>Strategy</h3>
@@ -67,7 +73,7 @@
         <ul>
           <li>
             <img
-              src="./images/mark guerrero.jpg"
+              src="./images/markguerrero.jpg"
               width="264"
               height="260"
               alt="photo with mark guerrero on a white background"
@@ -77,7 +83,7 @@
           </li>
           <li>
             <img
-              src="./images/tom ford.jpg"
+              src="./images/tomford.jpg"
               width="264"
               height="260"
               alt="photo with tom ford on a white background"
@@ -87,7 +93,7 @@
           </li>
           <li>
             <img
-              src="./images/camila garcia.jpg"
+              src="./images/camilagarcia.jpg"
               width="264"
               height="260"
               alt="photo with camila garcia on a white background"
@@ -97,7 +103,7 @@
           </li>
           <li>
             <img
-              src="./images/daniel wilson.jpg"
+              src="./images/danielwilson.jpg"
               width="264"
               height="260"
               alt="photo with daniel wilson on a white background"
@@ -109,7 +115,7 @@
       </section>
     </main>
     <footer>
-      <h3>WEBSTUDIO</h3>
+      <a href="./index.html">WebStudio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
