--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       </section>
       <!--team-->
       <section>
-        <h2>Our team</h2>
+        <h2>Our Team</h2>
         <ul>
           <li>
             <img
